# WhatsZap

./: .cursorrules  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/whatszap/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  file_monitor.cpp  file_monitor.h  malware_scanner.cpp  malware_scanner.h  native-lib.cpp  native-lib.h
app/src/main/java/com/example/whatszap/: AlertActivity.kt  ApkDetectionCallback.kt  FileMonitorService.kt  MainActivity.kt  ScanResult.kt
app/src/main/java/com/example/whatszap/network/: VirusTotalModels.kt  VirusTotalRepository.kt  VirusTotalService.kt
app/src/main/java/com/example/whatszap/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/whatszap/utils/: ApkAnalyzer.kt  HashUtils.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/whatszap/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
